web/libraries/fractal/components/tests/filter/pass/capitalize.twig
{{ 'my first car'|capitalize }}

{# outputs 'My first car' #}
