web/libraries/fractal/components/tests/filter/fail/country-name.twig
{# France #}
{{ 'FR'|country_name }}
